--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,8 @@
 
 <%= semantic_form_for @search do |form| %>
 <p>
-  <%= form.label :name_like, 'Name' %>
-  <%= form.text_field :name_like %>
+  <%= form.label :name_cont, 'Name' %>
+  <%= form.text_field :name_cont %>
   <%= form.submit "Search" %>
 </p>
 <% end %>
