--- a/app/views/requests/reject.html.erb
+++ b/app/views/requests/reject.html.erb
@@ -4,7 +4,7 @@
   <%= form.inputs do %>
     <%= form.input :rejected_by_authority, :as => :select, :label => 'Authority',
       :hint => 'Under which authority should rejection be made?',
-      :collection => ( current_user.allowed_authorities.to_a & @request.authorities ),
+      :collection => ( current_user.authorities.authorized.to_a & @request.authorities ),
       :html_options => { :include_blank => false } %>
     <%= form.input :rejection_comment, :as => :text,
       :hint => 'Provide a brief explanation for rejection of the request to share with the requestor.' %>
