--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<meta http-equiv="Content-Language" content="en-us" />
 	<link rel="SHORTCUT ICON" href="<%= image_path('favicon.ico') %>" type="image/x-icon" />
-	<%= stylesheet_link_tag 'screen', 'formtastic', 'formtastic_changes' %>
-	<%= javascript_include_tag :defaults %>
+	<%=raw stylesheet_link_tag 'application' %>
+	<%=raw javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
 </head>
 
