Do not present deprecated questions for request edit or show.  Attempt to create users who are not already registered in the system if authenticated by net id through sso.

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -11,9 +11,11 @@
       :hint => 'Select the position among your unexpired requests that reflects '+
       'your level of preference for this committee or position.' %>
     <% form.object.answers.each do |answer| %>
-      <%= form.semantic_fields_for :answers, answer do |subform| %>
-        <%= subform.input( :question_id, :as => :hidden ) if subform.object.new_record? %>
-        <%= render_question subform %>
+      <% if form.object.new_record? || form.object.questions.include?( answer.question ) %>
+        <%= form.semantic_fields_for :answers, answer do |subform| %>
+          <%= subform.input( :question_id, :as => :hidden ) if subform.object.new_record? %>
+          <%= render_question subform %>
+        <% end %>
       <% end %>
     <% end %>
     <%= form.semantic_fields_for :user do |subform| %>
