--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -26,6 +26,22 @@
 
 <%=markdown @committee.reject_message %>
 
+<%=form_tag tents_committee_path(@committee, :format => :pdf), :method => :get do %>
+<p>
+  <b><%=label_tag :as_of, 'As of' %></b>
+  <%=text_field_tag :as_of, params[:as_of].blank? ? Time.zone.now.strftime(DATE_FORMATS[:default] || '%Y-%m-%d') : params[:as_of] %>
+  <%=submit_tag "Download Tent Cards" %>
+</p>
+<% end %>
+
+<%=form_tag members_committee_path(@committee, :format => :pdf), :method => :get do %>
+<p>
+  <b><%=label_tag :as_of, 'As of' %></b>
+  <%=text_field_tag :as_of, params[:as_of].blank? ? Time.zone.now.strftime(DATE_FORMATS[:default] || '%Y-%m-%d') : params[:as_of] %>
+  <%=submit_tag "Download Membership Directory" %>
+</p>
+<% end %>
+
 <p>
 <% if permitted_to? :edit, @committee -%>
 <%= link_to 'Edit', edit_committee_path(@committee) %> |
