--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -29,7 +29,9 @@
 <%=form_tag tents_committee_path(@committee, :format => :pdf), :method => :get do %>
 <p>
   <b><%=label_tag :as_of, 'As of' %></b>
-  <%=text_field_tag :as_of, params[:as_of].blank? ? Time.zone.now.strftime(DATE_FORMATS[:default] || '%Y-%m-%d') : params[:as_of] %>
+  <%=text_field_tag :as_of,
+    ( params[:as_of].blank? ? Time.zone.now.strftime( '%Y-%m-%d') : params[:as_of] ),
+    class: 'ui-date-picker' %>
   <%=submit_tag "Download Tent Cards" %>
 </p>
 <% end %>
@@ -37,7 +39,9 @@
 <%=form_tag members_committee_path(@committee, :format => :pdf), :method => :get do %>
 <p>
   <b><%=label_tag :as_of, 'As of' %></b>
-  <%=text_field_tag :as_of, params[:as_of].blank? ? Time.zone.now.strftime(DATE_FORMATS[:default] || '%Y-%m-%d') : params[:as_of] %>
+  <%=text_field_tag :as_of,
+    ( params[:as_of].blank? ? Time.zone.now.strftime( '%Y-%m-%d' ) : params[:as_of] ),
+    class: 'ui-date-picker' %>
   <%=submit_tag "Download Membership Directory" %>
 </p>
 <% end %>
