Replace deprecated buttons call with actions call.

--- a/app/views/enrollments/_form.html.erb
+++ b/app/views/enrollments/_form.html.erb
@@ -7,5 +7,5 @@
   <%= form.input :membership_notices, :as => :radio,
     :hint => 'Should enrolled user be copied on notices regarding membership changes?' %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 
