--- a/app/views/periods/_form.html.erb
+++ b/app/views/periods/_form.html.erb
@@ -3,5 +3,5 @@
   <%= form.input :starts_at, :as => :date_picker %>
   <%= form.input :ends_at, :as => :date_picker %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 
