--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -23,5 +23,5 @@
   <%= form.input :leave_message %>
   <%= form.input :reject_message %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 
