--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -9,5 +9,5 @@
   <%= form.inputs :name => 'Quizzes' do %>
   <%= form.input :quizzes, :as => :check_boxes %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 
