--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -23,5 +23,5 @@
         :hint => 'You may optionally provide a resume (pdf only). This resume will appear in all your membership requests.' %>
     <% end %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 
