--- a/app/views/requests/reject.html.erb
+++ b/app/views/requests/reject.html.erb
@@ -9,7 +9,7 @@
     <%= form.input :rejection_comment, :as => :text,
       :hint => 'Provide a brief explanation for rejection of the request to share with the requestor.' %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 <% end %>
 
 <p>
