--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,5 +16,5 @@
       <%= form.input :status, :as => :radio, :collection => User::STATUSES %>
     <% end %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 
