--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -8,5 +8,5 @@
   <%= form.input :leave_message %>
   <%= form.input :reject_message %>
   <% end %>
-  <%= form.buttons %>
+  <%= form.actions %>
 
