--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -15,6 +15,10 @@
 </p>
 
 <p>
+  <b>Requestable?</b> <%=h @enrollment.requestable? ? 'Yes' : 'No' %>
+</p>
+
+<p>
   <b>Membership notices?</b> <%= @enrollment.membership_notices? ? 'Yes' : 'No' %>
 </p>
 
