Nearly pass unit tests.

--- a/app/views/request_mailer/close_notice.html.erb
+++ b/app/views/request_mailer/close_notice.html.erb
@@ -3,7 +3,7 @@ Dear <%= @request.user.first_name %>,
 </p>
 
 <p>
-This notice is to inform you that your request for appointment to <%= @request.requestable %> has been approved.
+This notice is to inform you that your request for appointment to <%= @request.committee %> has been approved.
 </p>
 
 <% if @request.memberships.any? %>
