--- a/app/views/requests/reject.html.erb
+++ b/app/views/requests/reject.html.erb
@@ -1,6 +1,7 @@
-<h2>Reject <%=h @request.user.name %> for <%=h @request.requestable %></h2>
+<h2>Reject <%=h @request.user.name %> for <%=h @request.committee %></h2>
 
-<%= semantic_form_for(@request, :url => do_reject_request_path(@request), :html => { :method => :put } ) do |form| %>
+<%= semantic_form_for(@request, url: do_reject_request_path(@request),
+  html: { method: :put } ) do |form| %>
   <%= form.inputs do %>
     <%= form.input :rejected_by_authority, :as => :select, :label => 'Authority',
       :hint => 'Under which authority should rejection be made?',
@@ -14,6 +15,6 @@
 
 <p>
 <%= link_to 'Show', @request %> |
-<%= link_to 'Back', polymorphic_path( [@request.requestable, :requests] ) %>
+<%= link_to 'Back', polymorphic_path( [@request.committee, :requests] ) %>
 </p>
 
