--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -3,6 +3,10 @@
 </p>
 
 <p>
+  <b>Active?</b> <%= @committee.active? ? 'Yes' : 'No' %>
+</p>
+
+<p>
   <b>Schedule:</b> <%=h @committee.schedule %>
 </p>
 
