--- a/app/views/enrollments/_enrollment.html.erb
+++ b/app/views/enrollments/_enrollment.html.erb
@@ -9,6 +9,6 @@
     <td><%=h enrollment.votes %></td>
     <td><%= link_to 'Show', enrollment %></td>
     <td><%= link_to( 'Edit', edit_enrollment_path(enrollment) ) if permitted_to? :edit, enrollment %></td>
-    <td><%= link_to( 'Destroy', enrollment, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, enrollment %></td>
+    <td><%= link_to( 'Destroy', enrollment, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, enrollment %></td>
   <% end %>
 
