--- a/app/views/positions/_position.html.erb
+++ b/app/views/positions/_position.html.erb
@@ -7,6 +7,6 @@
     <td><%=h position.slots %></td>
     <td><%= link_to 'Show', position %></td>
     <td><%= link_to( 'Edit', edit_position_path(position) ) if permitted_to? :edit, position %></td>
-    <td><%= link_to( 'Destroy', position, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, position %></td>
+    <td><%= link_to( 'Destroy', position, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, position %></td>
   <% end %>
 
