--- a/app/views/qualifications/_qualification.html.erb
+++ b/app/views/qualifications/_qualification.html.erb
@@ -3,6 +3,6 @@
     <td><%=h qualification.description %></td>
     <td><%= link_to 'Show', qualification %></td>
     <td><%= link_to( 'Edit', edit_qualification_path(qualification) ) if permitted_to? :edit, qualification %></td>
-    <td><%= link_to( 'Destroy', qualification, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, qualification %></td>
+    <td><%= link_to( 'Destroy', qualification, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, qualification %></td>
   <% end %>
 
