--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -5,6 +5,6 @@
     <td><%= question.global? ? 'Yes' : 'No' %></td>
     <td><%= link_to 'Show', question %></td>
     <td><%= link_to( 'Edit', edit_question_path(question) ) if permitted_to? :edit, question %></td>
-    <td><%= link_to( 'Destroy', question, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, question %></td>
+    <td><%= link_to( 'Destroy', question, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, question %></td>
   <% end %>
 
