--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -10,6 +10,6 @@
     <td><%= user.statuses.join ', ' %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to( 'Edit', edit_user_path(user) ) if permitted_to? :edit, user %></td>
-    <td><%= link_to( 'Destroy', user, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, user %></td>
+    <td><%= link_to( 'Destroy', user, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, user %></td>
   <% end %>
 
