--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -2,6 +2,6 @@
     <td><%=h schedule.name %></td>
     <td><%= link_to 'Show', schedule %></td>
     <td><%= link_to( 'Edit', edit_schedule_path(schedule) ) if permitted_to? :edit, schedule %></td>
-    <td><%= link_to( 'Destroy', schedule, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, schedule %></td>
+    <td><%= link_to( 'Destroy', schedule, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, schedule %></td>
   <% end %>
 
