--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -18,6 +18,12 @@
   <b>Ends at:</b> <%=h @membership.ends_at.to_s(:rfc822) %>
 </p>
 
+<% if @membership.request %>
+<p>
+  <b>Request:</b> <%=link_to 'Yes', @membership.request %>
+</p>
+<% end %>
+
 <% if @membership.join_notice_at? %>
 <p>
   <b>Join notice at:</b> <%=h @membership.join_notice_at.to_formatted_s( :long_ordinal ) %>
