Fix last commit.

--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -26,7 +26,7 @@
 
 <% if @membership.renewed_by_membership %>
 <p>
-  <b>Renewed by membership:</b> <%=link_to @membership.renewed_by_membership %>
+  <b>Renewed by membership:</b> <%=link_to @membership.renewed_by_membership, @membership.renewed_by_membership %>
 </p>
 <% end %>
 
